--- a/django_todo/templates/base.html
+++ b/django_todo/templates/base.html
@@ -18,6 +18,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'todo.index' %}">Todo</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'pluralization.index' %}">Pluralization</a>
+                    </li>
                 </ul>
             </div>
         </div>
